Fix colour contrast AA error

--- a/src/sass/molecules/_controls.scss
+++ b/src/sass/molecules/_controls.scss
@@ -19,7 +19,7 @@
     .stop,
     .finish,
     .cancel {
-        opacity: 0.2;
+        opacity: 0.5;
 
         &:hover,
         &:focus {
